# remanentia

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  Makefile  NOTICE.md  PHASE_CE_PLAN.md  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  REMANENTIA_10X_PLAN.md  REMANENTIA_V2_ARCHITECTURE.md  REUSE.toml  ROADMAP.md  RUNBOOK.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  VALIDATION.md  __init__.py  _typos.toml  ablation_channels.py  active_retrieval.py  aggregate_precompute.py  analyze_failures.py  answer_confidence.py  answer_extractor.py  answer_normalizer.py  api.py  (+125 more)
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
CHANGELOG/: index.html
adr/: index.html
api-guide/: index.html
benchmarks/: efficiency_baselines.json  efficiency_frontier_report.json  locomo_snapshot_report.json  longmemeval_full_s_seed1337_snapshot_report.json  longmemeval_full_s_seed42_snapshot_report.json  longmemeval_history.jsonl  longmemeval_oracle_snapshot_report.json  longmemeval_oracle_snapshot_report.json.license  reproducibility_manifest.json
data/: compiled_seed_facts.jsonl  local_model_comparison.md  longmemeval_hypotheses.jsonl  longmemeval_hypotheses.results.jsonl
disposition/: relationship.md  working_identity.md
docs/: CHANGELOG.md  api-guide.md  index.md
examples/: basic_search.py  consolidation.py  deep_recall.py  filtered_search.py  knowledge_notes.py  mcp_config.py  temporal_queries.py
experiments/: README.md  run_exp1_bm25.py  run_exp2_embed.py  run_exp4_llm.py  run_exp5_hybrid_llm.py  run_exp7_improved.py
extractors/: __init__.py  informational.py  physical.py  symbolic.py
fuzz/: fuzz_date_parse.py  fuzz_extract_entities.py  fuzz_normalize_answer.py  fuzz_percentage_regex.py  fuzz_tokenize.py
models/: index.html
notebooks/: 01_load_oracle_and_query.ipynb
paper/: architecture_routes_analysis.md  comprehensive_findings.md  consolidation_architecture.md  holographic_memory_investigation.md  internal_benchmark.json  locomo_results.json  longmemeval_final_results_2026-04-06.txt  memory_engineering_landscape.md  remanentia_paper_draft.md
reasoning_traces/: 2026-03-17T0519_scpn-control_dimits-convergence.md  2026-03-18_dynamic_retrieval_breakthrough.md  2026-03-18_retrieval_failure_analysis.md  2026-03-24T1547_competitive_landscape_research.md  2026-03-24T1600_10x_plan_decisions.md  2026-03-24T1700_v2_architecture_decisions.md
remanentia_topology/: Cargo.toml  pyproject.toml
remanentia_topology/src/: lib.rs
requirements/: docker.in  docker.txt
rust_active_retrieval/: Cargo.toml  pyproject.toml
rust_active_retrieval/src/: lib.rs
rust_aggregate_precompute/: Cargo.toml  pyproject.toml
rust_aggregate_precompute/src/: lib.rs
rust_answer_extractor/: Cargo.toml  pyproject.toml
rust_answer_extractor/src/: lib.rs
rust_answer_normalizer/: Cargo.toml  pyproject.toml
rust_answer_normalizer/src/: lib.rs
rust_consolidation/: Cargo.toml  pyproject.toml
rust_consolidation/src/: lib.rs
rust_entity_extractor/: Cargo.toml  pyproject.toml
rust_entity_extractor/src/: lib.rs
rust_fact_decomposer/: Cargo.toml  pyproject.toml
rust_knowledge_store/: Cargo.toml  pyproject.toml
rust_pii_redactor/: Cargo.toml  pyproject.toml
rust_recall/: Cargo.toml  pyproject.toml
rust_recall/src/: lib.rs
rust_retrieve/: Cargo.toml  pyproject.toml
rust_retrieve/src/: encode.rs  fusion.rs  lib.rs  snn.rs  tfidf.rs  tokenize.rs
rust_search/: Cargo.toml  pyproject.toml
rust_search/src/: lib.rs
rust_skill_extractor/: Cargo.toml  pyproject.toml
rust_skill_extractor/src/: lib.rs
rust_snn_memory/: Cargo.toml  pyproject.toml
rust_snn_memory/src/: config.rs  engine.rs  lib.rs  python_stream.rs  state.rs  streamed.rs
rust_snn_memory/tests/: public_api.rs  python_episode_parity.py  streamed_core.rs
rust_stdp/: Cargo.toml  pyproject.toml
rust_temporal/: Cargo.toml  pyproject.toml
schema/: remanentia_claim_axes.schema.json  remanentia_claim_axes.schema.json.license  snn_memory_cue_bundle_v2.schema.json  snn_memory_evaluation_v2.schema.json  snn_memory_experiment.schema.json  snn_memory_experiment_lock_v2.schema.json  snn_memory_source_universe_v2.schema.json
search/: search_index.json
snn_memory/: __init__.py  candidate_bank_v2.py  checkpoint.py  checkpoint_bundle_v2.py  checkpoint_materialize_v2.py  cli.py  cli_io.py  cli_runners.py  contracts.py  controls.py  cue_materializer.py  encoder.py  experiment.py  experiment_lock.py  gain_regime.py  gb_preflight.py  held_out_probe.py  metrics.py  probe.py  reference.py  sentence_encoder.py  source_universe.py  state.py  statistics.py  stream_backend.py  trainer.py  v2_contracts.py
tests/: __init__.py  benchmark_internal.py  conftest.py  test_10x_features.py  test_ablation_channels.py  test_aggregate_precompute.py  test_answer_confidence.py  test_answer_extractor.py  test_answer_normalizer.py  test_api.py  test_api_docs_wiring.py  test_api_security.py  test_api_server.py  test_arcane_retriever.py  test_bench_coverage_report.py  test_bench_locomo.py  test_bench_longmemeval_cli.py  test_bench_longmemeval_judge_evidence.py  test_bench_longmemeval_prompt.py  test_bench_longmemeval_retrieval_diagnostics.py  test_benchmark_manifest.py  test_benchmark_performance.py  test_benchmark_report.py  test_benchmark_suites.py  test_bus_recall.py  test_ci_trigger_covers_committed_reads.py  test_claim_axes.py  test_claim_schema.py  test_cli.py  test_cli_openapi.py  test_cli_recall.py  test_cli_serve_auth.py  test_cli_store_commands.py  test_cli_store_paths.py  test_compiled_memory.py  test_consolidation_engine.py  test_consolidation_summary_dag.py  test_consolidation_trace_analysis.py  test_container_deployment.py  test_coverage_accuracy.py  (+119 more)
tools/: bench_local_llm.sh  benchmark_performance.py  check_api_docs_wiring.py  check_release_integrity.py  discipline_recall.py  ingest_manuscripts.py  install_user_services.py  (+13 more)
(+295 files in other folders)
