[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remanentia"
version = "0.3.1"
description = "Persistent AI memory with SNN-orchestrated consolidation, entity graphs, and deep contextual recall"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Miroslav Šotek", email = "protoscience@anulum.li"},
]
keywords = [
    "memory", "ai-agents", "consolidation", "snn", "stdp",
    "entity-graph", "retrieval", "neuromorphic", "spiking-neural-network",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
retrieval = ["scikit-learn>=1.3"]
embedding = ["sentence-transformers>=2.0"]
gpu = ["torch>=2.0"]
sparse = ["scipy>=1.11"]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
llm = ["anthropic>=0.40"]
all = [
    "scikit-learn>=1.3",
    "sentence-transformers>=2.0",
    "scipy>=1.11",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.25",
]

[project.scripts]
remanentia = "cli:main"

[project.urls]
Homepage = "https://remanentia.com"
Repository = "https://github.com/anulum/remanentia"
Documentation = "https://remanentia.com/docs"
Issues = "https://github.com/anulum/remanentia/issues"
Author = "https://www.anulum.li"

[tool.setuptools]
py-modules = [
    "memory_index",
    "memory_recall",
    "consolidation_engine",
    "entity_extractor",
    "mcp_server",
    "cli",
    "api",
    "answer_extractor",
    "answer_normalizer",
    "temporal_graph",
    "knowledge_store",
    "observer",
    "reflector",
]

[tool.setuptools.package-data]
"*" = [
    "memory/**/*.md",
    "memory/**/*.json",
    "memory/**/*.jsonl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    # Dead/legacy — daemon killed, SNN retrieval dead, dashboard off
    "monitor.py",
    "snn_daemon.py",
    "snn_backend.py",
    "gpu_daemon.py",
    "retrieve.py",
    "encoding.py",
    "git_stimulus.py",
    "heartbeat_register.py",
    "hooks.py",
    "pattern_separation.py",
    "cognitive_snapshot.py",
    "active_retrieval.py",
    "skill_extractor.py",
    "__init__.py",
    "extractors/*",
    # Benchmarks and experiment runners (not product code)
    "bench_locomo.py",
    "bench_experiments.py",
    "analyze_failures.py",
    "run_exp*.py",
    "tests/benchmark_internal.py",
    "experimental/*",
    # Test files themselves
    "tests/test_*.py",
    "tests/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
    "except ImportError",
]
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "E402",
    "I001",
    "UP006", "UP031", "UP035", "UP037", "UP045",
    "F841",
    "SIM102", "SIM105", "SIM108",
    "B007", "B017", "B018", "B023", "B028", "B904", "B905",
]

[tool.bandit]
skips = ["B101", "B311", "B404", "B603", "B607"]
exclude_dirs = ["tests", "experimental"]
