[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remanentia"
version = "0.5.0"
description = "Persistent AI memory with SNN-orchestrated consolidation, entity graphs, and deep contextual recall"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Miroslav Šotek", email = "protoscience@anulum.li"},
]
keywords = [
    "memory", "ai-agents", "consolidation", "snn", "stdp",
    "entity-graph", "retrieval", "neuromorphic", "spiking-neural-network",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

dependencies = [
    "defusedxml>=0.7.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
retrieval = ["scikit-learn>=1.3"]
embedding = ["sentence-transformers>=3.0"]
gpu = ["torch>=2.0"]
temporal = ["sentence-transformers>=3.0", "torch>=2.0", "transformers>=4.45"]
sparse = ["scipy>=1.11"]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
bus = ["synapse-channel>=0.42.0"]
seal = ["scpn-studio-platform>=0.10,<0.11; python_version >= '3.12'"]
local = ["tomli>=2.0; python_version < '3.11'"]
guarded = [
    "tomli>=2.0; python_version < '3.11'",
    "director-ai[nli]>=3.11",
]
all = [
    "scikit-learn>=1.3",
    "sentence-transformers>=2.0",
    "scipy>=1.11",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "synapse-channel>=0.42.0",
    "tomli>=2.0; python_version < '3.11'",
    "scpn-studio-platform>=0.10,<0.11; python_version >= '3.12'",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "httpx>=0.25",
    "synapse-channel>=0.42.0",
    "scpn-studio-platform>=0.10,<0.11; python_version >= '3.12'",
]

[project.scripts]
remanentia = "cli:main"
remanentia-claim-schema = "claim_schema:main"
remanentia-benchmark-manifest = "benchmark_manifest:main"
remanentia-benchmark-report = "benchmark_report:main"
remanentia-efficiency-frontier = "efficiency_frontier:main"
remanentia-feed-ingest = "feed_ingest:main"
remanentia-write-discipline = "write_discipline:main"
remanentia-full-s-diagnostics = "full_s_diagnostics:main"
remanentia-recall-calibration = "recall_calibration:main"
remanentia-store-manifest = "store_manifest:main"
remanentia-store-sources = "store_sources:main"

[project.urls]
Homepage = "https://www.remanentia.com"
Repository = "https://github.com/anulum/remanentia"
Documentation = "https://www.remanentia.com/docs"
Issues = "https://github.com/anulum/remanentia/issues"
Changelog = "https://github.com/anulum/remanentia/blob/main/CHANGELOG.md"
Discussions = "https://github.com/anulum/remanentia/discussions"
Author = "https://www.anulum.li"

[tool.setuptools]
py-modules = [
    "active_retrieval",
    "memory_index",
    "memory_sources",
    "store_paths",
    "store_manifest",
    "store_sources",
    "openapi_export",
    "aggregate_precompute",
    "cross_session_synthesis",
    "benchmark_evidence",
    "benchmark_manifest",
    "benchmark_report",
    "efficiency_frontier",
    "claim_axes",
    "claim_schema",
    "recall_calibration",
    "recall_ledger",
    "recall_outcome_tracker",
    "retrieved_context",
    "full_s_diagnostics",
    "bus_recall",
    "finding_ingest",
    "feed_ingest",
    "feed_normalization",
    "write_discipline",
    "coverage_accuracy",
    "no_egress_audit",
    "lineage_completeness",
    "world_class_scorecard",
    "lean_context",
    "finding_envelope",
    "recall_gate",
    "index_freshness",
    "compiled_memory",
    "benchmark_suites",
    "memory_guarded",
    "memory_recall",
    "consolidation_engine",
    "entity_extractor",
    "mcp_server",
    "cli",
    "api",
    "api_security",
    "answer_extractor",
    "answer_normalizer",
    "temporal_graph",
    "knowledge_store",
    "observer",
    "reflector",
    "api_server",
    "arcane_retriever",
    "fact_decomposer",
    "date_normalizer",
    "temporal_relation",
    "fact_validity_model",
    "llm_backend",
    "llm_setup",
    "seed_utils",
    "skill_extractor",
    "vector_index",
    "vector_pipeline",
    "context_builder",
    "device_utils",
    "file_utils",
    "pii_redactor",
    "signal_detector",
]

[tool.setuptools.package-data]
"*" = [
    "memory/**/*.md",
    "memory/**/*.json",
    "memory/**/*.jsonl",
]

[tool.setuptools.data-files]
"share/remanentia/data" = ["data/compiled_seed_facts.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    # Dead/legacy — daemon killed, SNN retrieval dead, dashboard off
    "monitor.py",
    "snn_daemon.py",
    "snn_backend.py",
    "retrieve.py",
    "encoding.py",
    "git_stimulus.py",
    "heartbeat_register.py",
    "hooks.py",
    "pattern_separation.py",
    "cognitive_snapshot.py",
    "active_retrieval.py",
    "skill_extractor.py",
    "__init__.py",
    "extractors/*",
    # Benchmarks and experiment runners (not product code)
    "bench_locomo.py",
    "bench_experiments.py",
    "bench_longmemeval.py",
    "bench_longmemeval_local.py",
    "bench_all_local_models.py",
    "analyze_failures.py",
    # ML inference modules — require trained model files not present in CI
    "fact_validity_model.py",
    "temporal_relation.py",
    "run_exp*.py",
    "experimental/*",
    # Training infrastructure (not product code)
    "training/*",
    # Optional-dep bridges — director_ai is not installed on CI, so the
    # Guarded tier's scoring paths cannot execute and would always miss.
    # Parity tests that exercise this bridge run locally where director_ai
    # is present.
    "memory_guarded.py",
    # One-shot migration tool — runs against legacy pickle stores that
    # CI does not carry.
    "tools/migrate_pickle_to_npz.py",
    # Ad-hoc retrieval bench harness — not wired into product code.
    "ablation_channels.py",
    # Full-S retrieval-recall diagnostic — needs the cross-encoder model and
    # the 277 MB longmemeval_s.json haystack, neither present in CI. Its pure
    # logic (recall_curve, aggregate_recall) is unit-tested in
    # tests/test_retrieval_recall.py; the retriever loop is an I/O harness.
    "tools/retrieval_recall.py",
    # Test files themselves
    "tests/test_*.py",
    "tests/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
    "except ImportError",
]
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "E402",
    "I001",
    "UP006", "UP031", "UP035", "UP037", "UP045",
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM117",
    "E741",
    "F541",
    "B007", "B017", "B018", "B023", "B028", "B904", "B905",
]

[tool.bandit]
skips = ["B101", "B311", "B404", "B603", "B607", "B615"]
exclude_dirs = ["tests", "experimental"]
