[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remanentia"
version = "0.5.0"
description = "Local-first, auditable memory for AI agents and knowledge-intensive software"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Miroslav Šotek", email = "protoscience@anulum.li"},
]
keywords = [
    "memory", "ai-agents", "consolidation", "snn", "stdp",
    "entity-graph", "retrieval", "neuromorphic", "spiking-neural-network",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

dependencies = [
    "defusedxml>=0.7.1",
    "jsonschema>=4.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
retrieval = ["scikit-learn>=1.3"]
embedding = ["sentence-transformers>=3.0"]
gpu = ["torch>=2.0"]
temporal = ["sentence-transformers>=3.0", "torch>=2.0", "transformers>=4.45"]
sparse = ["scipy>=1.11"]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
bus = ["synapse-channel>=0.66.0"]
seal = ["scpn-studio-platform>=0.10,<0.11; python_version >= '3.12'"]
local = ["tomli>=2.0; python_version < '3.11'"]
guarded = [
    "tomli>=2.0; python_version < '3.11'",
    "director-ai[nli]>=3.11",
]
all = [
    "scikit-learn>=1.3",
    "sentence-transformers>=2.0",
    "scipy>=1.11",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "synapse-channel>=0.66.0",
    "tomli>=2.0; python_version < '3.11'",
    "scpn-studio-platform>=0.10,<0.11; python_version >= '3.12'",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "jsonschema>=4.20",
    "httpx>=0.25",
    "openai>=1.0,<3.0",
    "synapse-channel>=0.66.0",
    "scpn-studio-platform>=0.10,<0.11; python_version >= '3.12'",
]

[project.scripts]
remanentia = "cli:main"
remanentia-claim-schema = "claim_schema:main"
remanentia-benchmark-manifest = "benchmark_manifest:main"
remanentia-benchmark-report = "benchmark_report:main"
remanentia-efficiency-frontier = "efficiency_frontier:main"
remanentia-feed-ingest = "feed_ingest:main"
remanentia-write-discipline = "write_discipline:main"
remanentia-scorecard = "scorecard_report:main"
remanentia-provenance-export = "provenance_export:main"
remanentia-full-s-diagnostics = "full_s_diagnostics:main"
remanentia-recall-calibration = "recall_calibration:main"
remanentia-store-manifest = "store_manifest:main"
remanentia-store-sources = "store_sources:main"
remanentia-snn-memory = "snn_memory.cli:main"
remanentia-snn-source-universe = "snn_memory.source_universe:main"
remanentia-snn-cue-materializer = "snn_memory.cue_materializer:main"

[project.urls]
Homepage = "https://www.remanentia.com"
Repository = "https://github.com/anulum/remanentia"
Documentation = "https://anulum.github.io/remanentia/"
Issues = "https://github.com/anulum/remanentia/issues"
Changelog = "https://github.com/anulum/remanentia/blob/main/CHANGELOG.md"
Discussions = "https://github.com/anulum/remanentia/discussions"
Author = "https://www.anulum.li"

[tool.setuptools]
packages = ["snn_memory"]
py-modules = [
    "active_retrieval",
    "memory_index",
    "memory_dates",
    "memory_sources",
    "text_chunking",
    "store_paths",
    "store_manifest",
    "store_sources",
    "openapi_export",
    "aggregate_precompute",
    "cross_session_synthesis",
    "benchmark_evidence",
    "benchmark_manifest",
    "benchmark_report",
    "efficiency_frontier",
    "claim_axes",
    "claim_schema",
    "recall_calibration",
    "recall_ledger",
    "recall_outcome_tracker",
    "retrieved_context",
    "full_s_diagnostics",
    "bus_recall",
    "finding_ingest",
    "feed_ingest",
    "feed_normalization",
    "write_discipline",
    "coverage_accuracy",
    "no_egress_audit",
    "lineage_completeness",
    "fleet_recall_scorer",
    "judge_agreement",
    "provenance_export",
    "world_class_scorecard",
    "lean_context",
    "observed_context",
    "reader_budget",
    "hypothesis_checkpoint",
    "scorecard_report",
    "answer_confidence",
    "discipline_impact",
    "finding_envelope",
    "recall_gate",
    "index_freshness",
    "compiled_memory",
    "benchmark_suites",
    "memory_guarded",
    "memory_recall",
    "consolidation_engine",
    "entity_extractor",
    "mcp_server",
    "cli",
    "cli_recall",
    "api",
    "api_security",
    "answer_extractor",
    "answer_normalizer",
    "temporal_graph",
    "knowledge_store",
    "observer",
    "reflector",
    "api_server",
    "arcane_retriever",
    "fact_decomposer",
    "date_normalizer",
    "temporal_relation",
    "fact_validity_model",
    "llm_backend",
    "llm_setup",
    "seed_utils",
    "skill_extractor",
    "vector_index",
    "vector_pipeline",
    "context_builder",
    "device_utils",
    "file_utils",
    "pii_redactor",
    "signal_detector",
]

[tool.setuptools.package-data]
"*" = [
    "memory/**/*.md",
    "memory/**/*.json",
    "memory/**/*.jsonl",
]
"snn_memory" = ["schema/*.json", "schema/*.json.license"]

[tool.setuptools.data-files]
"share/remanentia/data" = ["data/compiled_seed_facts.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    # Dead/legacy — daemon killed, SNN retrieval dead, dashboard off
    "monitor.py",
    "snn_daemon.py",
    "snn_backend.py",
    "retrieve.py",
    "encoding.py",
    "git_stimulus.py",
    "heartbeat_register.py",
    "hooks.py",
    "pattern_separation.py",
    "cognitive_snapshot.py",
    "active_retrieval.py",
    "skill_extractor.py",
    "__init__.py",
    "extractors/*",
    # Benchmarks and experiment runners (not product code)
    "bench_locomo.py",
    "bench_experiments.py",
    "bench_longmemeval.py",
    "bench_longmemeval_local.py",
    "bench_all_local_models.py",
    "analyze_failures.py",
    "run_exp*.py",
    # Operator performance benchmark — writes internal benchmark reports, not
    # imported by product code (same class as the bench_*.py runners above).
    "tools/benchmark_performance.py",
    "experimental/*",
    # Training infrastructure (not product code)
    "training/*",
    # Optional-dep bridges — director_ai is not installed on CI, so the
    # Guarded tier's scoring paths cannot execute and would always miss.
    # Parity tests that exercise this bridge run locally where director_ai
    # is present.
    "memory_guarded.py",
    # One-shot migration tool — runs against legacy pickle stores that
    # CI does not carry.
    "tools/migrate_pickle_to_npz.py",
    # Ad-hoc retrieval bench harness — not wired into product code.
    "ablation_channels.py",
    # Full-S retrieval-recall diagnostic — needs the cross-encoder model and
    # the 277 MB longmemeval_s.json haystack, neither present in CI. Its pure
    # logic (recall_curve, aggregate_recall) is unit-tested in
    # tests/test_retrieval_recall.py; the retriever loop is an I/O harness.
    "tools/retrieval_recall.py",
    "tools/discipline_recall.py",
    # Local-judge agreement runner — re-judges a results file against a live
    # local model; its pure statistics live in judge_agreement.py (unit-tested,
    # 100 %), the runner itself is an un-imported I/O harness.
    "tools/local_judge_agreement.py",
    # The pinned-model run adapter needs the git-ignored 175 MB .snn_models/
    # checkpoint (absent in CI) and is excluded from the CI-core coverage
    # denominator. The model-free CLI surfaces STAY measured and are covered 100 %
    # in-process: snn_memory/cli.py (parsing, inspect/verify, dispatch) by
    # tests/test_snn_memory_cli.py, and snn_memory/cli_io.py (JSON + corpus digest
    # loading) by tests/test_snn_memory_cli_io.py. cli_runners.py and
    # sentence_encoder.py are covered by their own required model-provisioned report
    # (tests/model_gates/snn_memory_cli_runners_gate.py plus the exact installed-wheel
    # and source-tree model gates), run explicitly by
    # tools/verify_snn_memory_model_gates.py and never replaced by omission.
    "snn_memory/cli_runners.py",
    "snn_memory/sentence_encoder.py",
    # The streamed adapter hard-requires a separately built PyO3 wheel, which is
    # absent from the default Python-only CI core. It is never accepted by
    # omission alone: tools/verify_snn_memory_stream_stage1.py builds both clean
    # wheels, installs them outside the checkout, inventories its dedicated gate,
    # and enforces 100 % line + branch coverage on the installed adapter.
    "snn_memory/stream_backend.py",
    # Mandatory installed-wheel build/install/coverage orchestration harness;
    # its real subprocess exits and artifacts are the verifier's evidence. The
    # pinned-model verifier is likewise an explicit subprocess harness whose
    # model-provisioned reports are enforced outside the default CI core.
    "tools/verify_snn_memory_stream_stage1.py",
    "tools/verify_snn_memory_model_gates.py",
    # D1 is validated only through a freshly built and installed production
    # wheel against real temporary Git repositories. Its dedicated verifier
    # enforces 100 % line + branch coverage and self-audits the Stage-2 gate.
    "snn_memory/source_universe.py",
    "tools/verify_snn_memory_source_universe_d1.py",
    # D2/D3/D4-A are the SNN-memory v2 installed-wheel modules (landed 4e5ca5b).
    # Like D1 and the streamed adapter above, they are validated only through a
    # freshly built and installed production wheel run outside the checkout, so
    # the default Python-only CI core cannot exercise them and would report them
    # at 0 %. They are NEVER accepted by omission alone — each has a dedicated
    # verifier that builds + installs the wheel, runs its Stage-N installed gate
    # under coverage, and enforces the coverage floor at source:
    # - D2 cue_materializer: tools/verify_snn_memory_cue_materializer_d2.py
    #   (Stage-2 gate, real pinned encoder) -> coverage --fail-under=100.
    # - D3 experiment_lock + gb_preflight: tools/verify_snn_memory_d3.py
    #   (Stage-3 gate, Python + Rust wheels) -> coverage --fail-under=100.
    # - D4-A checkpoint_materialize_v2 + checkpoint_bundle_v2 + candidate_bank_v2:
    #   tools/verify_snn_memory_d4a.py (Stage-4 gate) -> >= 95 % line + branch
    #   with every accepted residual A/B/C-classified at source (T1819); any
    #   unclassified residual fails the verifier.
    "snn_memory/cue_materializer.py",
    "tools/verify_snn_memory_cue_materializer_d2.py",
    "snn_memory/experiment_lock.py",
    "snn_memory/gb_preflight.py",
    "tools/verify_snn_memory_d3.py",
    "snn_memory/checkpoint_materialize_v2.py",
    "snn_memory/checkpoint_bundle_v2.py",
    "snn_memory/candidate_bank_v2.py",
    "tools/verify_snn_memory_d4a.py",
    # Test files themselves
    "tests/test_*.py",
    "tests/conftest.py",
    # Specialized real gate harnesses are executed by their mandatory explicit
    # verifiers above; they are evidence generators, not product denominator.
    "tests/model_gates/*",
    "tests/installed_gates/*",
    "tests/stage2_installed_gates/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
    "except ImportError",
]
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "E402",
    "I001",
    "UP006", "UP031", "UP035", "UP037", "UP045",
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM117",
    "E741",
    "F541",
    "B007", "B017", "B018", "B023", "B028", "B904", "B905",
]

[tool.bandit]
skips = ["B101", "B311", "B404", "B603", "B607", "B615"]
exclude_dirs = ["tests", "experimental"]
