# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li

[build-system]
requires = ["maturin>=1.12,<2"]
build-backend = "maturin"

[project]
name = "remanentia-topology"
version = "0.1.0"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
