# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# Remanentia — remanentia_recall crate configuration

[package]
name = "remanentia_recall"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Miroslav Šotek <protoscience@anulum.li>"]
description = "Rust-accelerated tokenisation and scoring for Remanentia recall pipeline"

[lib]
name = "remanentia_recall"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
regex = "1"
