[package]
name = "remanentia-retrieve"
version = "0.1.0"
edition = "2021"

[lib]
name = "remanentia_retrieve"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
rayon = "1.10"
regex = "1.11"
rustc-hash = "2.1"
md-5 = "0.10"

[profile.release]
opt-level = 3
lto = true
